fixing test alignment in buttons, fixing avatar on fandetails

--- a/front-end/src/components/Profile.module.css
+++ b/front-end/src/components/Profile.module.css
@@ -527,6 +527,7 @@
     .editProfileBtn, .logoutBtn {
         width: 100%;
         max-width: 250px;
+        justify-content: center;
     }
 }
 
